--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,6 +109,7 @@ jobs:
     - name: Scan binaries for vulnerabilities
       uses: aquasecurity/trivy-action@master
       with:
+        scan-type: 'fs'
         input: 'dist/'
         format: 'table'
 
